# routes/recipes.js
@@ -3,6 +3,21 @@ var router = express.Router();
 const recipes_utils = require("./utils/recipes_utils");
 
 // router.get("/", (req, res) => res.send("im here"));
+/**
+ * Authenticate all incoming requests by middleware
+ */
+// router.use(async function (req, res, next) {
+//   if (req.session && req.session.user_id) {
+//     DButils.execQuery("SELECT user_id FROM users").then((users) => {
+//       if (users.find((x) => x.user_id === req.session.user_id)) {
+//         req.user_id = req.session.user_id;
+//         next();
+//       }
+//     }).catch(err => next(err));
+//   } else {
+//     res.sendStatus(401);
+//   }
+// });
 
 
 /**
@@ -12,10 +27,10 @@ const recipes_utils = require("./utils/recipes_utils");
 router.get("/", async (req, res, next) => {
   try {
     // Retrieve the user ID from the request query
-    const user_id = req.session.user_id;
+    // const user_id = req.session.user_id;
 
     // Call the function to get all recipes for the user
-    const recipes = await recipes_utils.getUserRecipes(user_id);
+    // const recipes = await recipes_utils.getUserRecipes(user_id);
     
     res.send(recipes);
   } catch (error) {
@@ -46,6 +61,7 @@ router.post("/", async (req, res, next) => {
  */
 router.get("/:recipeId", async (req, res, next) => {
   try {
+    console.log(": ", req.params.recipeId)
     const recipe = await recipes_utils.getRecipeDetails(req.params.recipeId);
     const ingredients = await recipes_utils.getRecipeIngredients(req.params.recipeId);
     const directions = await recipes_utils.getRecipeDirections(req.params.recipeId);
@@ -54,10 +70,46 @@ router.get("/:recipeId", async (req, res, next) => {
     recipe.ingredients = ingredients;
     recipe.directions = directions;
 
+
+
     res.send(recipe);
   } catch (error) {
     next(error);
   }
 });
+
+/**
+ * This path returns a full details of a recipe by its id
+ */
+router.delete("/:recipeId", async (req, res, next) => {
+  try {
+    console.log(": ", req.params.recipeId)
+    await recipes_utils.deleteRecipe(req.params.recipeId);
+    res.send(204);
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.put("/:recipeId", async (req, res, next) => {
+  try {
+    console.log(": ", req.params.recipeId)
+    await recipes_utils.updateRecipe(req.params.recipeId, req.body);
+    res.send(200);
+  } catch (error) {
+    next(error); 
+  }
+});
+
+// router.get("/search", async (req, res, next) => {
+//   try {
+//     const { query, filter, sort, limit } = req.query;
+//     const results = await recipes_utils.searchRecipes(query, filter, sort, limit);
+//     res.status(200).json({ results });
+//   } catch (error) {
+//     next(error); 
+//   }
+// });
+
 
 module.exports = router;
